Add Chat screen, configure getting mock data from store

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -14,3 +14,7 @@ $light-gray:              #F7F7F9;
 
 
 $base-font-family:        'Inter', sans-serif;
+$border-radius:            8px;
+$box-shadow:               0px 4px 8px rgba(0, 0, 0, 0.2);
+$h1-font-size:             18px;
+$h2-font-size:             16px;
